# Mental-Health-Classifier

./: .gitignore  README.md  predictions.csv  pyproject.toml
.claude/: settings.local.json
configs/: README.md  default.yaml  variant_stemming.yaml  variant_stopwords_domain.yaml  variant_stopwords_nltk.yaml
data/: data_test_fold1.csv
models/: lr_base.joblib  model.joblib  model_stemming.joblib  model_stopwords_domain.joblib  model_stopwords_nltk.joblib  svm_base.joblib
notebooks/: EDA.ipynb  README.md  pipeline_test.ipynb
reports/: final_evaluation.md  final_report.md  lr_base_test_metrics.json  lr_base_test_report.md  lr_base_training_metrics.json  lr_base_training_report.md  next_steps.md  optimization.md  optimization_results.json  optuna_lr_base.journal  optuna_svm_base.journal  optuna_tfidf_base.journal  optuna_tfidf_stemming.journal  optuna_tfidf_stopwords_domain.journal  optuna_tfidf_stopwords_nltk.journal  optuna_xgb_base.journal  optuna_xgb_stemming.journal  svm_base_test_metrics.json  svm_base_test_report.md  svm_base_training_metrics.json  svm_base_training_report.md  test_metrics.json  training_metrics.json  training_report.md
scripts/: README.md  generate_final_report.py  generate_optimization_report.py  run_lr_optimization.py  run_optimization_pipeline.py  run_svm_optimization.py  run_xgb_optimization.py
src/: README.md  __init__.py  __main__.py  data_ingestion.py  evaluate_cli.py  evaluation.py  inference.py  model.py  optimization.py  pipeline.py  preprocessing.py  training.py  utils.py  vectorizer.py
tests/: README.md  conftest.py  (+10 more)
(+18 files in other folders)
