[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "suicide_classifier"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "pandas==3.0.3",
    "numpy>=1.26.0",
    "scikit-learn==1.8.0",
    "xgboost==3.2.0",
    "nltk==3.9.1",
    "joblib>=1.4.0",
    "pyyaml>=6.0.2",
    "matplotlib>=3.9.0",
    "optuna>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
[project.scripts]
train = "src.training:main" ## ejemplos
infer = "src.inference:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]